<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlanche"
    tools:context="com.mertos_l.cocookingfinaldesign.MainActivity">
    <com.astuetz.PagerSlidingTabStrip
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:background="@drawable/background_tabs"
        app:pstsShouldExpand="true"
        app:pstsDividerColor="@color/colorRouge"
        app:pstsUnderlineHeight="1dp"
        app:pstsIndicatorHeight="1dp"/>
    <android.support.v4.view.ViewPager
        android:id="@+id/containerRecherche"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/container_activity"
        android:layout_below="@+id/tabs"
        tools:context=".MainActivity" />
    <android.support.v4.view.ViewPager
        android:id="@+id/containerResultat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/container_activity"
        android:layout_below="@+id/tabs"
        tools:context=".MainActivity"
        android:visibility="gone"/>
    <android.support.v4.view.ViewPager
        android:id="@+id/containerDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/container_activity"
        android:layout_below="@+id/tabs"
        tools:context=".MainActivity"
        android:visibility="gone" />
    <android.support.v4.view.ViewPager
        android:id="@+id/containerRepas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/container_activity"
        android:layout_below="@+id/tabs"
        tools:context=".MainActivity"
        android:visibility="gone" />
    <android.support.v4.view.ViewPager
        android:id="@+id/containerMessagerie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/container_activity"
        android:layout_below="@+id/tabs"
        tools:context=".MainActivity"
        android:visibility="gone" />
    <android.support.v4.view.ViewPager
        android:id="@+id/containerProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/container_activity"
        android:layout_below="@+id/tabs"
        tools:context=".MainActivity"
        android:visibility="gone" />
    <RelativeLayout
        android:id="@+id/rl_container_edit_profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/container_activity"
        android:visibility="gone">
        <android.support.v4.view.ViewPager
            android:id="@+id/containerEditerProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/indicator"
            tools:context=".MainActivity" />
        <me.relex.circleindicator.CircleIndicator
            android:id="@+id/indicator"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            app:ci_animator="@animator/indicator_no_animator"
            app:ci_drawable="@drawable/red_radius"
            app:ci_drawable_unselected="@drawable/black_radius"
            app:ci_height="6dp"
            app:ci_width="6dp">
        </me.relex.circleindicator.CircleIndicator>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/container_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/border"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/recherche"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_recherche"
                android:contentDescription="@string/recherche"/>
            <TextView
                android:id="@+id/tv_recherche"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tv_recherche"
                android:textSize="12sp"
                android:textColor="@color/colorBleuMarine"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/profile"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_profile"
                android:contentDescription="@string/profile"/>
            <TextView
                android:id="@+id/tv_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tv_profile"
                android:textSize="12sp"
                android:textColor="@color/colorBleuMarine"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/repas"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_repas"
                android:contentDescription="@string/repas"/>
            <TextView
                android:id="@+id/tv_repas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tv_repas"
                android:textSize="12sp"
                android:textColor="@color/colorBleuMarine"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/messagerie"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_messagerie"
                android:contentDescription="@string/messagerie" />
            <TextView
                android:id="@+id/tv_messagerie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tv_messagerie"
                android:textSize="12sp"
                android:textColor="@color/colorBleuMarine"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
